force-app/main/default/objects/prox__Prodigy_Data_Table__mdt/prox__Prodigy_Data_Table__mdt.object-meta.xml
<CustomObject>
    <label>Prodigy Data Table</label>
    <pluralLabel>Prodigy Data Table</pluralLabel>
</CustomObject>