force-app/main/default/objects/prox__Prodigy_Data_Table__mdt/fields/prox__Auto_Refresh_Interval__c.field-meta.xml
<CustomField>
    <fullName>prox__Auto_Refresh_Interval__c</fullName>
    <label>Auto Refresh Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>