force-app/main/default/objects/prox__Prodigy_Data_Table__mdt/fields/prox__default_number_of_rows__c.field-meta.xml
<CustomField>
    <fullName>prox__default_number_of_rows__c</fullName>
    <label>default number of rows</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>