force-app/main/default/objects/prox__Prodigy_Data_Table__mdt/fields/prox__Show_Count_of_Records__c.field-meta.xml
<CustomField>
    <fullName>prox__Show_Count_of_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Count of Records</label>
    <type>Checkbox</type>
</CustomField>